--- a/index.html
+++ b/index.html
@@ -183,6 +183,283 @@
             </div>
         </div>
     </div>
+    <hr>
+    <h5>Conestoga products that we will be selling until inventory runs out.</h5>
+    <div class="container">
+        <div class="row">
+            <div class="one-third column">
+                <div class="row">
+                    <img src="img/UA XL Sweat.jpg" style="width: 250px;" />
+                </div>
+                <h5 style="margin: 0;">UA Hoodie - L</h5>
+                <p style="font-size: large">$45</p>
+            </div>
+            <div class="one-third column">
+                <div class="row">
+                    <img src="img/UA XL Sweat.jpg" style="width: 250px;" />
+                </div>
+                <h5 style="margin: 0;">UA Hoodie - M</h5>
+                <p style="font-size: large">$45</p>
+            </div>
+            <div class="one-third column">
+                <div class="row"><img src="img/tote.jpg" style="width: 250px;" /></div>
+                <h5 style="margin: 0;">Tote</h5>
+                <p style="font-size: large">$5</p>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="one-third column">
+                <center>
+                    <form target="paypal" action="https://www.paypal.com/cgi-bin/webscr" method="post">
+                        <input type="hidden" name="cmd" value="_s-xclick">
+                        <input type="hidden" name="hosted_button_id" value="GMEUFSFHHTZA6">
+                        <table>
+                            <tr><td><input type="hidden" name="on0" value="Email address">Email address</td></tr><tr><td><input type="text" name="os0" maxlength="200"></td></tr>
+                        </table>
+                        <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_cart_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
+                        <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
+                    </form>
+                    Please enter your contact email address upon checkout.
+                </center>
+            </div>
+            <div class="one-third column">
+                <center>
+                    <form target="paypal" action="https://www.paypal.com/cgi-bin/webscr" method="post">
+                        <input type="hidden" name="cmd" value="_s-xclick">
+                        <input type="hidden" name="hosted_button_id" value="WDVBW75XUKYN8">
+                        <table>
+                            <tr><td><input type="hidden" name="on0" value="Email address">Email address</td></tr><tr><td><input type="text" name="os0" maxlength="200"></td></tr>
+                        </table>
+                        <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_cart_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
+                        <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
+                    </form>
+                    Please enter your contact email address upon checkout.
+                </center>
+            </div>
+            <div class="one-third column">
+                <center>
+                    <form target="paypal" action="https://www.paypal.com/cgi-bin/webscr" method="post">
+                        <input type="hidden" name="cmd" value="_s-xclick">
+                        <input type="hidden" name="hosted_button_id" value="U2W29HVJ4PUB6">
+                        <table>
+                            <tr><td><input type="hidden" name="on0" value="Email address">Email address</td></tr><tr><td><input type="text" name="os0" maxlength="200"></td></tr>
+                        </table>
+                        <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_cart_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
+                        <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
+                    </form>
+                    Please enter your contact email address upon checkout.
+                </center>
+            </div>
+        </div>
+
+        <hr>
+
+        <div class="row">
+            <div class="one-third column">
+                <div class="row">
+                    <img src="img/Winter%20pom%20beanie.jpg" style="width: 250px;" />
+                </div>
+                <h5 style="margin: 0;">Winter Pom Beanie</h5>
+                <p style="font-size: large">$20</p>
+            </div>
+            <div class="one-third column">
+                <div class="row">
+                    <img src="img/baseball%20hat.jpg" style="width: 250px;" />
+                </div>
+                <h5 style="margin: 0;">Baseball Hat</h5>
+                <p style="font-size: large">$10</p>
+            </div>
+            <div class="one-third column">
+                <div class="row"><img src="img/bucket%20hat.jpg" style="width: 250px;" /></div>
+                <h5 style="margin: 0;">Bucket Hat</h5>
+                <p style="font-size: large">$20</p>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="one-third column">
+                <center>
+                    <form target="paypal" action="https://www.paypal.com/cgi-bin/webscr" method="post">
+                        <input type="hidden" name="cmd" value="_s-xclick">
+                        <input type="hidden" name="hosted_button_id" value="WWRWYLAY6UHCE">
+                        <table>
+                            <tr><td><input type="hidden" name="on0" value="Email address">Email address</td></tr><tr><td><input type="text" name="os0" maxlength="200"></td></tr>
+                        </table>
+                        <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_cart_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
+                        <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
+                    </form>
+                    Please enter your contact email address upon checkout.
+                </center>
+            </div>
+            <div class="one-third column">
+                <center>
+                    <form target="paypal" action="https://www.paypal.com/cgi-bin/webscr" method="post">
+                        <input type="hidden" name="cmd" value="_s-xclick">
+                        <input type="hidden" name="hosted_button_id" value="NAMXZUZ76KU4G">
+                        <table>
+                            <tr><td><input type="hidden" name="on0" value="Email address">Email address</td></tr><tr><td><input type="text" name="os0" maxlength="200"></td></tr>
+                        </table>
+                        <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_cart_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
+                        <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
+                    </form>
+                    Please enter your contact email address upon checkout.
+                </center>
+            </div>
+            <div class="one-third column">
+                <center>
+                    <form target="paypal" action="https://www.paypal.com/cgi-bin/webscr" method="post">
+                        <input type="hidden" name="cmd" value="_s-xclick">
+                        <input type="hidden" name="hosted_button_id" value="5JN7A4EZQLGV4">
+                        <table>
+                            <tr><td><input type="hidden" name="on0" value="Email address">Email address</td></tr><tr><td><input type="text" name="os0" maxlength="200"></td></tr>
+                        </table>
+                        <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_cart_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
+                        <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
+                    </form>
+                    Please enter your contact email address upon checkout.
+                </center>
+            </div>
+        </div>
+
+        <hr>
+
+        <div class="row">
+            <div class="one-third column">
+                <div class="row">
+                    <img src="img/trucker%20hat.jpg" style="width: 250px;" />
+                </div>
+                <h5 style="margin: 0;">Trucker Hat</h5>
+                <p style="font-size: large">$15</p>
+            </div>
+            <div class="one-third column">
+                <div class="row">
+                    <img src="img/pennant.jpg" style="width: 250px;" />
+                </div>
+                <h5 style="margin: 0;">Pennant</h5>
+                <p style="font-size: large">$5</p>
+            </div>
+            <div class="one-third column">
+                <div class="row"><img src="img/magnet.jpg" style="width: 250px;" /></div>
+                <h5 style="margin: 0;">Magnet</h5>
+                <p style="font-size: large">$4</p>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="one-third column">
+                <center>
+                    <form target="paypal" action="https://www.paypal.com/cgi-bin/webscr" method="post">
+                        <input type="hidden" name="cmd" value="_s-xclick">
+                        <input type="hidden" name="hosted_button_id" value="43PNAJZ94PRZN">
+                        <table>
+                            <tr><td><input type="hidden" name="on0" value="Email address">Email address</td></tr><tr><td><input type="text" name="os0" maxlength="200"></td></tr>
+                        </table>
+                        <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_cart_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
+                        <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
+                    </form>
+                    Please enter your contact email address upon checkout.
+                </center>
+            </div>
+            <div class="one-third column">
+                <center>
+                    <form target="paypal" action="https://www.paypal.com/cgi-bin/webscr" method="post">
+                        <input type="hidden" name="cmd" value="_s-xclick">
+                        <input type="hidden" name="hosted_button_id" value="BETG8BHNY4KA4">
+                        <table>
+                            <tr><td><input type="hidden" name="on0" value="Email address">Email address</td></tr><tr><td><input type="text" name="os0" maxlength="200"></td></tr>
+                        </table>
+                        <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_cart_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
+                        <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
+                    </form>
+                    Please enter your contact email address upon checkout.
+                </center>
+            </div>
+            <div class="one-third column">
+                <center>
+                    <form target="paypal" action="https://www.paypal.com/cgi-bin/webscr" method="post">
+                        <input type="hidden" name="cmd" value="_s-xclick">
+                        <input type="hidden" name="hosted_button_id" value="HLU3HVTFTLLUS">
+                        <table>
+                            <tr><td><input type="hidden" name="on0" value="Email address">Email address</td></tr><tr><td><input type="text" name="os0" maxlength="200"></td></tr>
+                        </table>
+                        <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_cart_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
+                        <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
+                    </form>
+                    Please enter your contact email address upon checkout.
+                </center>
+            </div>
+        </div>
+
+        <hr>
+
+        <div class="row">
+            <div class="one-third column">
+                <div class="row">
+                    <img src="img/sweatpants.jpg" style="width: 250px;" />
+                </div>
+                <h5 style="margin: 0;">Sweatpants - S</h5>
+                <p style="font-size: large">$20</p>
+            </div>
+            <div class="one-third column">
+                <div class="row">
+                    <img src="img/sweatpants.jpg" style="width: 250px;" />
+                </div>
+                <h5 style="margin: 0;">Sweatpants - M</h5>
+                <p style="font-size: large">$20</p>
+            </div>
+            <div class="one-third column">
+                <div class="row"><img src="img/sweatpants.jpg" style="width: 250px;" /></div>
+                <h5 style="margin: 0;">Sweatpants - L</h5>
+                <p style="font-size: large">$20</p>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="one-third column">
+                <center>
+                    <form target="paypal" action="https://www.paypal.com/cgi-bin/webscr" method="post">
+                        <input type="hidden" name="cmd" value="_s-xclick">
+                        <input type="hidden" name="hosted_button_id" value="C95RSG2V6YZAJ">
+                        <table>
+                            <tr><td><input type="hidden" name="on0" value="Email address">Email address</td></tr><tr><td><input type="text" name="os0" maxlength="200"></td></tr>
+                        </table>
+                        <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_cart_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
+                        <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
+                    </form>
+                    Please enter your contact email address upon checkout.
+                </center>
+            </div>
+            <div class="one-third column">
+                <center>
+                    <form target="paypal" action="https://www.paypal.com/cgi-bin/webscr" method="post">
+                        <input type="hidden" name="cmd" value="_s-xclick">
+                        <input type="hidden" name="hosted_button_id" value="RJN9YE5DHJH7S">
+                        <table>
+                            <tr><td><input type="hidden" name="on0" value="Email address">Email address</td></tr><tr><td><input type="text" name="os0" maxlength="200"></td></tr>
+                        </table>
+                        <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_cart_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
+                        <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
+                    </form>
+                    Please enter your contact email address upon checkout.
+                </center>
+            </div>
+            <div class="one-third column">
+                <center>
+                    <form target="paypal" action="https://www.paypal.com/cgi-bin/webscr" method="post">
+                        <input type="hidden" name="cmd" value="_s-xclick">
+                        <input type="hidden" name="hosted_button_id" value="TETK9PEXQDACN">
+                        <table>
+                            <tr><td><input type="hidden" name="on0" value="Email address">Email address</td></tr><tr><td><input type="text" name="os0" maxlength="200"></td></tr>
+                        </table>
+                        <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_cart_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
+                        <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
+                    </form>
+                    Please enter your contact email address upon checkout.
+                </center>
+            </div>
+        </div>
+    </div>
 </div>
 
 <!-- The Modal -->
