--- a/index.html
+++ b/index.html
@@ -185,23 +185,24 @@
     </div>
     <hr>
     <h5>Conestoga products that we will be selling until inventory runs out.</h5>
+    <p>All sales benefit Conestoga Student Council</p>
     <div class="container">
         <div class="row">
-            <div class="one-third column">
+            <div class="one-third column" style="border-left: 3px solid black; border-right: 3px solid black;">
                 <div class="row">
                     <img src="img/UA XL Sweat.jpg" style="width: 250px;" />
                 </div>
                 <h5 style="margin: 0;">UA Hoodie - L</h5>
                 <p style="font-size: large">$45</p>
             </div>
-            <div class="one-third column">
+            <div class="one-third column" style="border-left: 3px solid black; border-right: 3px solid black;">
                 <div class="row">
                     <img src="img/UA XL Sweat.jpg" style="width: 250px;" />
                 </div>
                 <h5 style="margin: 0;">UA Hoodie - M</h5>
                 <p style="font-size: large">$45</p>
             </div>
-            <div class="one-third column">
+            <div class="one-third column" style="border-left: 3px solid black; border-right: 3px solid black;">
                 <div class="row"><img src="img/tote.jpg" style="width: 250px;" /></div>
                 <h5 style="margin: 0;">Tote</h5>
                 <p style="font-size: large">$5</p>
@@ -209,7 +210,7 @@
         </div>
 
         <div class="row">
-            <div class="one-third column">
+            <div class="one-third column" style="border-left: 3px solid black; border-right: 3px solid black;">
                 <center>
                     <form target="paypal" action="https://www.paypal.com/cgi-bin/webscr" method="post">
                         <input type="hidden" name="cmd" value="_s-xclick">
@@ -223,7 +224,7 @@
                     Please enter your contact email address upon checkout.
                 </center>
             </div>
-            <div class="one-third column">
+            <div class="one-third column" style="border-left: 3px solid black; border-right: 3px solid black;">
                 <center>
                     <form target="paypal" action="https://www.paypal.com/cgi-bin/webscr" method="post">
                         <input type="hidden" name="cmd" value="_s-xclick">
@@ -237,7 +238,7 @@
                     Please enter your contact email address upon checkout.
                 </center>
             </div>
-            <div class="one-third column">
+            <div class="one-third column" style="border-left: 3px solid black; border-right: 3px solid black;">
                 <center>
                     <form target="paypal" action="https://www.paypal.com/cgi-bin/webscr" method="post">
                         <input type="hidden" name="cmd" value="_s-xclick">
@@ -256,21 +257,21 @@
         <hr>
 
         <div class="row">
-            <div class="one-third column">
+            <div class="one-third column" style="border-left: 3px solid black; border-right: 3px solid black;">
                 <div class="row">
                     <img src="img/Winter%20pom%20beanie.jpg" style="width: 250px;" />
                 </div>
                 <h5 style="margin: 0;">Winter Pom Beanie</h5>
                 <p style="font-size: large">$20</p>
             </div>
-            <div class="one-third column">
+            <div class="one-third column" style="border-left: 3px solid black; border-right: 3px solid black;">
                 <div class="row">
                     <img src="img/baseball%20hat.jpg" style="width: 250px;" />
                 </div>
                 <h5 style="margin: 0;">Baseball Hat</h5>
                 <p style="font-size: large">$10</p>
             </div>
-            <div class="one-third column">
+            <div class="one-third column" style="border-left: 3px solid black; border-right: 3px solid black;">
                 <div class="row"><img src="img/bucket%20hat.jpg" style="width: 250px;" /></div>
                 <h5 style="margin: 0;">Bucket Hat</h5>
                 <p style="font-size: large">$20</p>
@@ -278,7 +279,7 @@
         </div>
 
         <div class="row">
-            <div class="one-third column">
+            <div class="one-third column" style="border-left: 3px solid black; border-right: 3px solid black;">
                 <center>
                     <form target="paypal" action="https://www.paypal.com/cgi-bin/webscr" method="post">
                         <input type="hidden" name="cmd" value="_s-xclick">
@@ -292,7 +293,7 @@
                     Please enter your contact email address upon checkout.
                 </center>
             </div>
-            <div class="one-third column">
+            <div class="one-third column" style="border-left: 3px solid black; border-right: 3px solid black;">
                 <center>
                     <form target="paypal" action="https://www.paypal.com/cgi-bin/webscr" method="post">
                         <input type="hidden" name="cmd" value="_s-xclick">
@@ -306,7 +307,7 @@
                     Please enter your contact email address upon checkout.
                 </center>
             </div>
-            <div class="one-third column">
+            <div class="one-third column" style="border-left: 3px solid black; border-right: 3px solid black;">
                 <center>
                     <form target="paypal" action="https://www.paypal.com/cgi-bin/webscr" method="post">
                         <input type="hidden" name="cmd" value="_s-xclick">
@@ -325,21 +326,21 @@
         <hr>
 
         <div class="row">
-            <div class="one-third column">
+            <div class="one-third column" style="border-left: 3px solid black; border-right: 3px solid black;">
                 <div class="row">
                     <img src="img/trucker%20hat.jpg" style="width: 250px;" />
                 </div>
                 <h5 style="margin: 0;">Trucker Hat</h5>
                 <p style="font-size: large">$15</p>
             </div>
-            <div class="one-third column">
+            <div class="one-third column" style="border-left: 3px solid black; border-right: 3px solid black;">
                 <div class="row">
                     <img src="img/pennant.jpg" style="width: 250px;" />
                 </div>
                 <h5 style="margin: 0;">Pennant</h5>
                 <p style="font-size: large">$5</p>
             </div>
-            <div class="one-third column">
+            <div class="one-third column" style="border-left: 3px solid black; border-right: 3px solid black;">
                 <div class="row"><img src="img/magnet.jpg" style="width: 250px;" /></div>
                 <h5 style="margin: 0;">Magnet</h5>
                 <p style="font-size: large">$4</p>
@@ -347,7 +348,7 @@
         </div>
 
         <div class="row">
-            <div class="one-third column">
+            <div class="one-third column" style="border-left: 3px solid black; border-right: 3px solid black;">
                 <center>
                     <form target="paypal" action="https://www.paypal.com/cgi-bin/webscr" method="post">
                         <input type="hidden" name="cmd" value="_s-xclick">
@@ -361,7 +362,7 @@
                     Please enter your contact email address upon checkout.
                 </center>
             </div>
-            <div class="one-third column">
+            <div class="one-third column" style="border-left: 3px solid black; border-right: 3px solid black;">
                 <center>
                     <form target="paypal" action="https://www.paypal.com/cgi-bin/webscr" method="post">
                         <input type="hidden" name="cmd" value="_s-xclick">
@@ -375,7 +376,7 @@
                     Please enter your contact email address upon checkout.
                 </center>
             </div>
-            <div class="one-third column">
+            <div class="one-third column" style="border-left: 3px solid black; border-right: 3px solid black;">
                 <center>
                     <form target="paypal" action="https://www.paypal.com/cgi-bin/webscr" method="post">
                         <input type="hidden" name="cmd" value="_s-xclick">
@@ -394,21 +395,21 @@
         <hr>
 
         <div class="row">
-            <div class="one-third column">
+            <div class="one-third column" style="border-left: 3px solid black; border-right: 3px solid black;">
                 <div class="row">
                     <img src="img/sweatpants.jpg" style="width: 250px;" />
                 </div>
                 <h5 style="margin: 0;">Sweatpants - S</h5>
                 <p style="font-size: large">$20</p>
             </div>
-            <div class="one-third column">
+            <div class="one-third column" style="border-left: 3px solid black; border-right: 3px solid black;">
                 <div class="row">
                     <img src="img/sweatpants.jpg" style="width: 250px;" />
                 </div>
                 <h5 style="margin: 0;">Sweatpants - M</h5>
                 <p style="font-size: large">$20</p>
             </div>
-            <div class="one-third column">
+            <div class="one-third column" style="border-left: 3px solid black; border-right: 3px solid black;">
                 <div class="row"><img src="img/sweatpants.jpg" style="width: 250px;" /></div>
                 <h5 style="margin: 0;">Sweatpants - L</h5>
                 <p style="font-size: large">$20</p>
@@ -416,7 +417,7 @@
         </div>
 
         <div class="row">
-            <div class="one-third column">
+            <div class="one-third column" style="border-left: 3px solid black; border-right: 3px solid black;">
                 <center>
                     <form target="paypal" action="https://www.paypal.com/cgi-bin/webscr" method="post">
                         <input type="hidden" name="cmd" value="_s-xclick">
@@ -430,7 +431,7 @@
                     Please enter your contact email address upon checkout.
                 </center>
             </div>
-            <div class="one-third column">
+            <div class="one-third column" style="border-left: 3px solid black; border-right: 3px solid black;">
                 <center>
                     <form target="paypal" action="https://www.paypal.com/cgi-bin/webscr" method="post">
                         <input type="hidden" name="cmd" value="_s-xclick">
@@ -444,7 +445,7 @@
                     Please enter your contact email address upon checkout.
                 </center>
             </div>
-            <div class="one-third column">
+            <div class="one-third column" style="border-left: 3px solid black; border-right: 3px solid black;">
                 <center>
                     <form target="paypal" action="https://www.paypal.com/cgi-bin/webscr" method="post">
                         <input type="hidden" name="cmd" value="_s-xclick">
