--- a/index.html
+++ b/index.html
@@ -211,9 +211,11 @@
 
         <div class="row">
             <div class="one-third column" style="border-left: 3px solid black; border-right: 3px solid black;">
-            </div>
+            Sold out 
+</div>
             <div class="one-third column" style="border-left: 3px solid black; border-right: 3px solid black;">
-            </div>
+            Sold out
+</div>
             <div class="one-third column" style="border-left: 3px solid black; border-right: 3px solid black;">
                 <center>
                     <form target="paypal" action="https://www.paypal.com/cgi-bin/webscr" method="post">
