--- a/index.html
+++ b/index.html
@@ -193,14 +193,12 @@
                     <img src="img/UA XL Sweat.jpg" style="width: 250px;" />
                 </div>
                 <h5 style="margin: 0;">UA Hoodie - L</h5>
-                <p style="font-size: large">Sold out</p>
             </div>
             <div class="one-third column" style="border-left: 3px solid black; border-right: 3px solid black;">
                 <div class="row">
                     <img src="img/UA XL Sweat.jpg" style="width: 250px;" />
                 </div>
                 <h5 style="margin: 0;">UA Hoodie - M</h5>
-                <p style="font-size: large">Sold out</p>
             </div>
             <div class="one-third column" style="border-left: 3px solid black; border-right: 3px solid black;">
                 <div class="row"><img src="img/tote.jpg" style="width: 250px;" /></div>
@@ -211,11 +209,11 @@
 
         <div class="row">
             <div class="one-third column" style="border-left: 3px solid black; border-right: 3px solid black;">
-            Sold out 
-</div>
+                <h5>Sold out</h5>
+            </div>
             <div class="one-third column" style="border-left: 3px solid black; border-right: 3px solid black;">
-            Sold out
-</div>
+                <h5>Sold out</h5>
+            </div>
             <div class="one-third column" style="border-left: 3px solid black; border-right: 3px solid black;">
                 <center>
                     <form target="paypal" action="https://www.paypal.com/cgi-bin/webscr" method="post">
