--- a/index.html
+++ b/index.html
@@ -376,7 +376,6 @@
                     <img src="img/sweatpants.jpg" style="width: 250px;" />
                 </div>
                 <h5 style="margin: 0;">Sweatpants - S</h5>
-                <p style="font-size: large">$20</p>
             </div>
             <div class="one-third column" style="border-left: 3px solid black; border-right: 3px solid black;">
                 <div class="row">
@@ -392,18 +391,7 @@
 
         <div class="row">
             <div class="one-third column" style="border-left: 3px solid black; border-right: 3px solid black;">
-                <center>
-                    <form target="paypal" action="https://www.paypal.com/cgi-bin/webscr" method="post">
-                        <input type="hidden" name="cmd" value="_s-xclick">
-                        <input type="hidden" name="hosted_button_id" value="C95RSG2V6YZAJ">
-                        <table>
-                            <tr><td><input type="hidden" name="on0" value="Email address">Email address</td></tr><tr><td><input type="text" name="os0" maxlength="200"></td></tr>
-                        </table>
-                        <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_cart_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
-                        <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
-                    </form>
-                    Please enter your contact email address upon checkout.
-                </center>
+                <h5>Sold out</h5>
             </div>
             <div class="one-third column" style="border-left: 3px solid black; border-right: 3px solid black;">
                 <h5>Sold out</h5>
